--- a/configs/probe_basic/probe_basic.ini
+++ b/configs/probe_basic/probe_basic.ini
@@ -6,8 +6,6 @@ DEBUG = 0
 [DISPLAY]
 DISPLAY = probe_basic
 OPEN_FILE = ~/linuxcnc/nc_files/pb_examples/blank.ngc
-DISPLAY = probe_basic
-OPEN_FILE = ~/linuxcnc/nc_files/pb_examples/blank.ngc
 CONFIRM_EXIT = False
 LOG_FILE = sim.log
 LOG_LEVEL = DEBUG
@@ -30,15 +28,16 @@ DEFAULT_ANGULAR_VELOCITY = 12.000000
 MIN_ANGULAR_VELOCITY = 1.666667
 MAX_ANGULAR_VELOCITY = 180.000000
 EDITOR = gedit
-GEOMETRY = xyza
+GEOMETRY = XYZA
 CYCLE_TIME = 100
 USER_BUTTONS_PATH = user_buttons/
+USER_TAB_PATH = user_tabs/
 USER_DROS_PATH = user_dro_display/
 DRO_DISPLAY = XYZA
 GEOMETRY = XYZA
-OFFSET_COLUMNS = XYZAR
+OFFSET_COLUMNS = XYZA
 TOOL_TABLE_COLUMNS = TZDR
-KEYBOARD_JOG = truemo
+KEYBOARD_JOG = true
 KEYBOARD_JOG_SAFETY_OFF = true
 ATC_TAB_DISPLAY = 0
 
@@ -67,7 +66,7 @@ CYCLE_TIME = 0.010
 
 [RS274NGC]
 RS274NGC_STARTUP_CODE = F10 S300 G20 G17 G40 G49 G54 G64 P0.001 G80 G90 G91.1 G92.1 G94 G97 G98
-PARAMETER_FILE = sim.var
+PARAMETER_FILE = linuxcnc.var
 OWORD_NARGS = 1
 NO_DOWNCASE_OWORD = 1
 SUBROUTINE_PATH = subroutines
@@ -139,6 +138,30 @@ TOOL_CHANGE_QUILL_UP = 1
 MAX_VELOCITY = 50.0
 MAX_ACCELERATION = 750.0
 MIN_LIMIT = -0.01
+MAX_LIMIT = 100.0
+
+[JOINT_0]
+TYPE = LINEAR
+HOME = 0.0
+FERROR = 1000
+MIN_FERROR = 1000
+MAX_VELOCITY = 50.0
+MAX_ACCELERATION = 750.0
+MIN_LIMIT = -0.01
+MAX_LIMIT = 100.0
+
+HOME_OFFSET = -2.0
+HOME_SEARCH_VEL = -2.000000
+HOME_LATCH_VEL = 2.000000
+HOME_FINAL_VEL = 2.000000
+HOME_USE_INDEX = NO
+HOME_IGNORE_LIMITS = YES
+HOME_SEQUENCE = 2
+# ------------------------------
+[AXIS_Y]
+MAX_VELOCITY = 50.0
+MAX_ACCELERATION = 750.0
+MIN_LIMIT = -0.01
 MAX_LIMIT = 300.0
 
 [JOINT_1]
@@ -150,12 +173,20 @@ MAX_VELOCITY = 50.0
 MAX_ACCELERATION = 750.0
 MIN_LIMIT = -0.01
 MAX_LIMIT = 300.0
+
+HOME_OFFSET = -2.0
+HOME_SEARCH_VEL = -2.000000
+HOME_LATCH_VEL = 2.000000
+HOME_FINAL_VEL = 2.000000
+HOME_USE_INDEX = NO
+HOME_IGNORE_LIMITS = YES
+HOME_SEQUENCE = 3
 # ------------------------------
-[AXIS_Y]
+[AXIS_Z]
 MAX_VELOCITY = 50.0
 MAX_ACCELERATION = 750.0
-MIN_LIMIT = -0.01
-MAX_LIMIT = 300.0
+MIN_LIMIT = -100
+MAX_LIMIT = 0.01
 
 [JOINT_2]
 TYPE = LINEAR
@@ -164,24 +195,16 @@ FERROR = 1000
 MIN_FERROR = 1000
 MAX_VELOCITY = 50.0
 MAX_ACCELERATION = 750.0
-MIN_LIMIT = -0.01
-MAX_LIMIT = 300.0
-# ------------------------------
-[AXIS_Z]
-MAX_VELOCITY = 50.0
-MAX_ACCELERATION = 750.0
-MIN_LIMIT = -0.01
-MAX_LIMIT = 300.0
+MIN_LIMIT = -100
+MAX_LIMIT = 0.01
 
-[JOINT_0]
-TYPE = LINEAR
-HOME = 0.0
-FERROR = 1000
-MIN_FERROR = 1000
-MAX_VELOCITY = 50.0
-MAX_ACCELERATION = 750.0
-MIN_LIMIT = -0.01
-MAX_LIMIT = 300.0
+HOME_OFFSET = 2.0
+HOME_SEARCH_VEL = 2.000000
+HOME_LATCH_VEL = -2.000000
+HOME_FINAL_VEL = 2.000000
+HOME_USE_INDEX = NO
+HOME_IGNORE_LIMITS = YES
+HOME_SEQUENCE = 1
 # ------------------------------
 [AXIS_A]
 MAX_VELOCITY = 50.0
