--- a/configs/probe_basic/XX-probe_basic.ini
+++ b/configs/probe_basic/XX-probe_basic.ini
@@ -1,16 +1,19 @@
 [EMC]
-MACHINE = QtPyVCP - probe_basic Sim
-DEBUG = 1
 VERSION = 1.1
+MACHINE = QtPyVCP - probe_basic Sim
+DEBUG = 0
 
 [DISPLAY]
 DISPLAY = probe_basic
-DRO_DISPLAY = XYZA
-USER_DROS_PATH = user_dro_display/
-#OPEN_FILE = ~/linuxcnc/nc_files/pb_examples/blank.ngc
+OPEN_FILE = ~/linuxcnc/nc_files/pb_examples/blank.ngc
+CONFIRM_EXIT = False
+LOG_FILE = sim.log
+LOG_LEVEL = DEBUG
+PREFERENCE_FILE = sim.pref
 CONFIG_FILE = custom_config.yml
-POSITION_FEEDBACK = ACTUAL
+POSITION = 0x0
 POSITION_OFFSET = RELATIVE
+POSITION_FEEDBACK = ACTUAL
 MAX_FEED_OVERRIDE = 2.000000
 MIN_SPINDLE_OVERRIDE = 0.500000
 MAX_SPINDLE_OVERRIDE = 2.000000
@@ -18,43 +21,25 @@ INTRO_GRAPHIC = pbsplash.png
 INTRO_TIME = 5
 PROGRAM_PREFIX = ~/linuxcnc/nc_files
 INCREMENTS = 1mm 0.1mm 0.01mm 0.001mm
-USER_TAB_PATH = user_tabs/
-USER_BUTTONS_PATH = user_buttons/
-DEFAULT_LINEAR_VELOCITY = 20.000000
+DEFAULT_LINEAR_VELOCITY = 50.000000
 MIN_LINEAR_VELOCITY = 0.500000
 MAX_LINEAR_VELOCITY = 50.000000
 DEFAULT_ANGULAR_VELOCITY = 12.000000
 MIN_ANGULAR_VELOCITY = 1.666667
 MAX_ANGULAR_VELOCITY = 180.000000
 EDITOR = gedit
+GEOMETRY = XYZA
 CYCLE_TIME = 100
+USER_BUTTONS_PATH = user_buttons/
+USER_TAB_PATH = user_tabs/
+USER_DROS_PATH = user_dro_display/
+DRO_DISPLAY = XYZA
+GEOMETRY = XYZA
 OFFSET_COLUMNS = XYZA
 TOOL_TABLE_COLUMNS = TZDR
 KEYBOARD_JOG = true
 KEYBOARD_JOG_SAFETY_OFF = true
-USER_ATC_BUTTONS_PATH = user_atc_buttons/
-ATC_TAB_DISPLAY = 1
-
-GEOMETRY = XYZA
-POSITION = 0x0
-LOG_FILE = sim.log
-LOG_LEVEL = DEBUG
-PREFERENCE_FILE = sim.pref
-
-[ATC]
-# Carousel images are available for 8, 10, 12, 14, 16, 18, 20, 21, 24 pocket changers
-POCKETS = 20
-# The Z height your spindle needs to be at to clamp/unclamp a tool from the ATC platter
-Z_TOOL_CHANGE_HEIGHT = -3.1900
-# The Z clearance height in machine coordinates your spindle needs to be at to clear the tools during carousel rotation 
-Z_TOOL_CLEARANCE_HEIGHT = 0.0000
-# Step Time should be set to the approximate time it takes your ATC to rotate from one pocket to the next entry is in milliseconds(1 second = 1000ms)
-# This just adjust the speed of the ATC tab Carousel GFX rotation (default if omitted is 1000ms)
-STEP_TIME = 500
-
-[MDI_COMMAND_LIST]
-MDI_COMMAND = G0 Z0;X0 Y0
-MDI_COMMAND = G53 G0 Z0;G53 G0 X0 Y0
+ATC_TAB_DISPLAY = 0
 
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Greyscale Depth Image
@@ -64,36 +49,41 @@ gif = image-to-gcode
 jpg = image-to-gcode
 py = python
 
+[ATC]
+# Carousel images are available for 8, 10, 12, 14, 16, 18, 20, 21, 24 pocket changers
+POCKETS = 12
+# The Z height your spindle needs to be at to clamp/unclamp a tool from the ATC platter
+Z_TOOL_CHANGE_HEIGHT = -3.1900
+# The Z clearance height in machine coordinates your spindle needs to be at to clear the tools during carousel rotation 
+Z_TOOL_CLEARANCE_HEIGHT = 0.0000
+# Step Time should be set to the approximate time it takes your ATC to rotate from one pocket to the next entry is in milliseconds(1 second = 1000ms)
+# This just adjust the speed of the ATC tab Carousel GFX rotation (default if omitted is 1000ms)
+STEP_TIME = 500
+
 [TASK]
 TASK = milltask
 CYCLE_TIME = 0.010
 
 [RS274NGC]
-RS274NGC_STARTUP_CODE = F10 S3000 G21 G17 G40 G49 G54 G64 P.001 G80 G90 G91.1 G92.1 G94 G97 G98
+RS274NGC_STARTUP_CODE = F10 S300 G20 G17 G40 G49 G54 G64 P0.001 G80 G90 G91.1 G92.1 G94 G97 G98
 PARAMETER_FILE = linuxcnc.var
 OWORD_NARGS = 1
 NO_DOWNCASE_OWORD = 1
 SUBROUTINE_PATH = subroutines
-REMAP=M6 modalgroup=6 ngc=manuell_atc
-REMAP=M600 modalgroup=6 ngc=m600
-REMAP=M300 modalgroup=7 ngc=m300
-REMAP=M500 modalgroup=7 ngc=m500
-
 
 [EMCMOT]
 EMCMOT = motmod
 COMM_TIMEOUT = 1.0
 SERVO_PERIOD = 1000000
-
-[HMOT]
-# **** This is for info only ****
-CARD0=Beckhoff_EK1100
+BASE_PERIOD = 50000
 
 [HAL]
+#HALFILE = hallib/tc.hal
 HALUI = halui
 HALFILE = hallib/cnc.hal
-HALFILE = hallib/opti-vfd.hal
-HALFILE = hallib/xhc-whb04b-6-2.hal
+HALFILE = hallib/xhc-whb04b-6.hal
+#HALFILE = hallib/spindle_sim.hal
+#HALFILE = hallib/simulated_home_probe_basic.hal
 POSTGUI_HALFILE = hallib/probe_basic_postgui.hal
 TWOPASS = on
 
@@ -141,13 +131,12 @@ MAX_LINEAR_VELOCITY = 50.00
 EMCIO = io
 CYCLE_TIME = 0.100
 TOOL_TABLE = tool.tbl
-TOOL_CHANGE_QUILL_UP = 0
-TOOL_CHANGE_AT_G30 = 0
+TOOL_CHANGE_QUILL_UP = 1
 
 # ------------------------------
 [AXIS_X]
 MAX_VELOCITY = 50.0
-MAX_ACCELERATION = 300.0
+MAX_ACCELERATION = 750.0
 MIN_LIMIT = -0.01
 MAX_LIMIT = 100.0
 
@@ -171,7 +160,7 @@ HOME_SEQUENCE = 2
 # ------------------------------
 [AXIS_Y]
 MAX_VELOCITY = 50.0
-MAX_ACCELERATION = 300.0
+MAX_ACCELERATION = 750.0
 MIN_LIMIT = -0.01
 MAX_LIMIT = 300.0
 
@@ -195,7 +184,7 @@ HOME_SEQUENCE = 3
 # ------------------------------
 [AXIS_Z]
 MAX_VELOCITY = 50.0
-MAX_ACCELERATION = 300.0
+MAX_ACCELERATION = 750.0
 MIN_LIMIT = -100
 MAX_LIMIT = 0.01
 
